--- a/src/components/app-home/app-home.scss
+++ b/src/components/app-home/app-home.scss
@@ -38,6 +38,7 @@ app-home {
         display: flex;
         flex-direction: row;
         height: 100%;
+        background: url(../../assets/image/data-screen-bg.png) repeat;
     }
 
     .datascreen-edit-box{
@@ -47,19 +48,23 @@ app-home {
         height: 100%;
         .datascreen-edit-footer {
             height: 80px;
-            box-shadow:  0 4px 16px var(--ion-color-primary-shade)
+            z-index: 1;
+            margin-right: 0px;
+            background: var(--ion-background-color);
+            box-shadow:  2px 2px 8px var(--ion-color-primary-shade)
         }
         .datascreen-edit-container {
             flex: 1;
             padding: 5%;
-            background: url(../../assets/image/data-screen-bg.jpeg);
-            background-size: 100% 100%;
         }
     }
 
     .datascreen-setting-box{
-        min-width: 500px;
-        width: 35%;
-        max-width: 50%;
+        min-width: 400px;
+        width: 30%;
+        max-width: 40%;
+        margin-left: 16px;
+        overflow: hidden;
+        position: relative;
     }
 }
