--- a/src/components/cy-draggable-canvas/cy-draggable-canvas.css
+++ b/src/components/cy-draggable-canvas/cy-draggable-canvas.css
@@ -1,6 +1,5 @@
 :host{
-    --box-shadow:  0 4px 16px rgba(0,0,0,.12);
-    --border: 1px solid var(--ion-color-primary);
+    --box-shadow:  0 4px 16px var(--ion-color-primary-shade);
    --background: var(--ion-background-color);
     display: block;
     width: 100%;
@@ -12,7 +11,6 @@
 .drag_container {
     width: 100%;
     height: 100%;
-    border: var(--border);
     box-shadow: var(--box-shadow);
     position: relative;
     background-color: var(--background)
