--- a/src/global/theme.css
+++ b/src/global/theme.css
@@ -135,13 +135,15 @@
 :root .black-theme {
     --ion-text-color: #ffffff;
     --ion-background-color: #282830;
+    --ion-background-contrast: #1c1c1c;
+    --ion-background-shade: #0a0a0a;
 
-    --ion-color-primary: #000000;
-    --ion-color-primary-rgb: rgb(0, 0, 0);
-    --ion-color-primary-contrast: #e6b52f;
-    --ion-color-primary-contrast-rgb: rgb(238, 189, 54);
-    --ion-color-primary-shade: #000000;
-    --ion-color-primary-tint: #1a1a1a;
+    --ion-color-primary: #3880ff;
+    --ion-color-primary-rgb: 56,128,255;
+    --ion-color-primary-contrast: #ffffff;
+    --ion-color-primary-contrast-rgb: 255,255,255;
+    --ion-color-primary-shade: #3171e0;
+    --ion-color-primary-tint: #4c8dff;
     
     --ion-color-secondary: #303640;
     --ion-color-secondary-rgb: 48,54,64;
