--- a/src/components/cy-draggable-canvas/cy-draggable-canvas.css
+++ b/src/components/cy-draggable-canvas/cy-draggable-canvas.css
@@ -1,6 +1,6 @@
 :host{
-    --box-shadow:  var(--ion-color-primary-shade)  0 0 30px 0;
-   --background: var(--ion-background-color);
+    --box-shadow:  var(--ion-background-shade, #1c1c1c)  0 0 30px 0;
+   --background: var(--ion-background-color, #282830);
     display: block;
     width: 100%;
     height: 100%;
