--- a/src/global/app.css
+++ b/src/global/app.css
@@ -17,7 +17,8 @@
 @import "theme.css";
 
 :root {
-  --header-height: 115px;
+  --header-height: 50px;
+  --font-size: 16px;
 }
 
 ion-toolbar {
@@ -25,7 +26,7 @@ ion-toolbar {
 }
 
 html {
-  font-size: 18px;
+  font-size: var(--font-size);
 }
 
 ion-toggle {
