--- a/src/components/cy-draggable-canvas/cy-draggable-canvas.css
+++ b/src/components/cy-draggable-canvas/cy-draggable-canvas.css
@@ -4,7 +4,10 @@
     display: block;
     width: 100%;
     height: 100%;
+    transform-origin: 0 0;
+    transition: .2s all ease-in-out;
 }
+
 *{
     box-sizing: border-box;
 }
