--- a/src/components/cy-draggable-canvas/cy-draggable-canvas.css
+++ b/src/components/cy-draggable-canvas/cy-draggable-canvas.css
@@ -1,4 +1,4 @@
-:host{
+cy-draggable-canvas{
     --box-shadow:  var(--ion-background-shade, #1c1c1c)  0 0 30px 0;
    --background: var(--datascreen-canvas-bg, #282830);
     display: block;
@@ -7,11 +7,7 @@
     transform-origin: 0 0;
     transition: .2s all ease-in-out;
 }
-
-*{
-    box-sizing: border-box;
-}
-.drag_container {
+cy-draggable-canvas .drag_container {
     width: 100%;
     height: 100%;
     box-shadow: var(--box-shadow);
