--- a/src/components/cy-draggable/cy-draggable.css
+++ b/src/components/cy-draggable/cy-draggable.css
@@ -25,6 +25,10 @@
     background: var(--background);
 }
 
+.border{
+    border: 1px solid var(--border-color);
+}
+
 .container {
     width: 100%;
     height: 100%;
@@ -41,15 +45,15 @@
     z-index: 1;
     border-width: var(--border-width);
     border-style: solid;
-    border-color: var(--border-color);
+    border-color: transparent;
     box-shadow: 0 0.25em 0.575em var(--box-shadow), 0 0.275em 0.5em var(--box-shadow);
     transition: 0.5s all ease;
 }
 
+
 .hiddlen {
     visibility: hidden;
     box-shadow: none;
-    border-color: transparent;
 }
 
 .draggable_menu {
