设置面板接数据 图层面板跟画布面板数据关联

--- a/src/components/cy-draggable/cy-draggable.css
+++ b/src/components/cy-draggable/cy-draggable.css
@@ -79,6 +79,7 @@
     z-index: 999;
     border-radius: 50%;
     background: var(--border-color);
+    transition: 0.5s all ease;
 }
 
 .drag_tag_right {
