--- a/src/components/datascreen-layer/datascreen-layer.scss
+++ b/src/components/datascreen-layer/datascreen-layer.scss
@@ -11,6 +11,13 @@ datascreen-layer{
 
     ion-content {
         width: 200px;
+
+        ion-item {
+            ion-thumbnail{
+                width: 35px;
+                height: 35px;
+            }
+        }
     }
 
     ion-toolbar {
