--- a/src/global/theme.css
+++ b/src/global/theme.css
@@ -134,23 +134,23 @@
 
 :root .black-theme {
     --ion-text-color: #ffffff;
+    --ion-text-color-rgb: rgb(255,255,255);
     --ion-toolbar-background: #282830;
     --ion-background-color: #282830;
     --ion-background-contrast: #1c1c1c;
     --ion-background-shade: #0a0a0a;
-    --datascreen-canvas-bg: #0d2a43;
 
     --ion-color-primary: #3880ff;
-    --ion-color-primary-rgb: 56,128,255;
+    --ion-color-primary-rgb: rgb(56,128,255);
     --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
+    --ion-color-primary-contrast-rgb: rgb(255,255,255);
     --ion-color-primary-shade: #3171e0;
     --ion-color-primary-tint: #4c8dff;
     
     --ion-color-secondary: #303640;
-    --ion-color-secondary-rgb: 48,54,64;
+    --ion-color-secondary-rgb: rgb(48,54,64);
     --ion-color-secondary-contrast: #ffffff;
-    --ion-color-secondary-contrast-rgb: 255,255,255;
+    --ion-color-secondary-contrast-rgb: rgb(255,255,255);
     --ion-color-secondary-shade: #2a3038;
     --ion-color-secondary-tint: #454a53;
 
