--- a/src/components/cy-draggable/cy-draggable.css
+++ b/src/components/cy-draggable/cy-draggable.css
@@ -5,6 +5,7 @@
     --border-width: 1px;
     --padding: 10px;
     --overflow: hidden;
+    --opacity: 1;
     padding: 0 !important;
     margin: 0 !important;
     display: block;
@@ -31,6 +32,7 @@
     width: 100%;
     height: 100%;
     overflow: var(--overflow);
+    opacity: var(--opacity);
 }
 
 .draggable_over {
