--- a/src/components/app-home/app-home.scss
+++ b/src/components/app-home/app-home.scss
@@ -3,7 +3,7 @@ app-home {
         display: flex;
         flex-direction: row;
         height: 100%;
-        background: url(../../assets/image/data-screen-bg.png) repeat;
+        background: url(../../assets/image/dian.png) repeat;
     }
 
 }
