--- a/src/global/theme.css
+++ b/src/global/theme.css
@@ -1,135 +1,49 @@
-:root .red-theme {
-    --ion-background-color: #ffffff;
-
-    --ion-color-primary: #f04141;
-    --ion-color-primary-rgb: 240,65,65;
-    --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: 255,255,255;
-    --ion-color-primary-shade: #d33939;
-    --ion-color-primary-tint: #f25454;
-  
-    --ion-color-secondary: #2eefda;
-    --ion-color-secondary-rgb: 46,239,218;
-    --ion-color-secondary-contrast: #000000;
-    --ion-color-secondary-contrast-rgb: 0,0,0;
-    --ion-color-secondary-shade: #28d2c0;
-    --ion-color-secondary-tint: #43f1de;
-  
-    --ion-color-tertiary: #7044ff;
-    --ion-color-tertiary-rgb: 112,68,255;
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: 255,255,255;
-    --ion-color-tertiary-shade: #633ce0;
-    --ion-color-tertiary-tint: #7e57ff;
-  
-    --ion-color-success: #10dc60;
-    --ion-color-success-rgb: 16,220,96;
-    --ion-color-success-contrast: #ffffff;
-    --ion-color-success-contrast-rgb: 255,255,255;
-    --ion-color-success-shade: #0ec254;
-    --ion-color-success-tint: #28e070;
-  
-    --ion-color-warning: #ffce00;
-    --ion-color-warning-rgb: 255,206,0;
-    --ion-color-warning-contrast: #ffffff;
-    --ion-color-warning-contrast-rgb: 255,255,255;
-    --ion-color-warning-shade: #e0b500;
-    --ion-color-warning-tint: #ffd31a;
-  
-    --ion-color-danger: #f04141;
-    --ion-color-danger-rgb: 245,61,61;
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: 255,255,255;
-    --ion-color-danger-shade: #d33939;
-    --ion-color-danger-tint: #f25454;
-  
-    --ion-color-dark: #222428;
-    --ion-color-dark-rgb: 34,34,34;
-    --ion-color-dark-contrast: #ffffff;
-    --ion-color-dark-contrast-rgb: 255,255,255;
-    --ion-color-dark-shade: #1e2023;
-    --ion-color-dark-tint: #383a3e;
-  
-    --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: 152,154,162;
-    --ion-color-medium-contrast: #ffffff;
-    --ion-color-medium-contrast-rgb: 255,255,255;
-    --ion-color-medium-shade: #86888f;
-    --ion-color-medium-tint: #a2a4ab;
-  
-    --ion-color-light: #f4f5f8;
-    --ion-color-light-rgb: 244,244,244;
-    --ion-color-light-contrast: #000000;
-    --ion-color-light-contrast-rgb: 0,0,0;
-    --ion-color-light-shade: #d7d8da;
-    --ion-color-light-tint: #f5f6f9;
-}
-
 :root .default-theme {
+    /* --ion-text-color: #f4f5f8; */
+    /* --ion-text-color-rgb: rgb(244,244,244); */
+    --ion-toolbar-background: #ffffff;
     --ion-background-color: #ffffff;
+    --ion-background-contrast: #f5f6f9;
+    --ion-background-shade: #d7d8da;
 
     --ion-color-primary: #3880ff;
-    --ion-color-primary-rgb: rgb(56, 128, 255);
+  --ion-color-primary-rgb: 56,128,255;
+  --ion-color-primary-contrast: #ffffff;
+  --ion-color-primary-contrast-rgb: 255,255,255;
+  --ion-color-primary-shade: #3171e0;
+  --ion-color-primary-tint: #4c8dff;
+
+  --ion-color-secondary: #0cd1e8;
+  --ion-color-secondary-rgb: 12,209,232;
+  --ion-color-secondary-contrast: #ffffff;
+  --ion-color-secondary-contrast-rgb: 255,255,255;
+  --ion-color-secondary-shade: #0bb8cc;
+  --ion-color-secondary-tint: #24d6ea;
+}
+
+:root .purple-theme {
+    --ion-text-color: #7d28ef;
+    --ion-text-color-rgb: rgb(255,255,255);
+    --ion-toolbar-background: #6e39b4;
+    --ion-background-color: #c8a4f8;
+    --ion-background-contrast: #ceadf9;
+    --ion-background-shade: #b090da;
+
+    --ion-color-primary: #6500eb;
+    --ion-color-primary-rgb: rgb(125,40,239);
     --ion-color-primary-contrast: #ffffff;
-    --ion-color-primary-contrast-rgb: rgb(255, 255, 255);
-    --ion-color-primary-shade: #3171e0;
-    --ion-color-primary-tint: #4c8dff;
-
-    --ion-color-secondary: #ffa127;
-  --ion-color-secondary-rgb: 255,161,39;
-  --ion-color-secondary-contrast: #000000;
-  --ion-color-secondary-contrast-rgb: 0,0,0;
-  --ion-color-secondary-shade: #e08e22;
-  --ion-color-secondary-tint: #ffaa3d;
-
-    --ion-color-tertiary: #7044ff;
-    --ion-color-tertiary-rgb: rgb(112, 68, 255);
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: rgb(255, 255, 255);
-    --ion-color-tertiary-shade: #633ce0;
-    --ion-color-tertiary-tint: #7e57ff;
-
-    --ion-color-success: #10dc60;
-    --ion-color-success-rgb: rgb(16, 220, 96);
-    --ion-color-success-contrast: #ffffff;
-    --ion-color-success-contrast-rgb: rgb(255, 255, 255);
-    --ion-color-success-shade: #0ec254;
-    --ion-color-success-tint: #28e070;
-
-    --ion-color-warning: #ffce00;
-    --ion-color-warning-rgb: rgb(255, 206, 0);
-    --ion-color-warning-contrast: #ffffff;
-    --ion-color-warning-contrast-rgb: rgb(255, 255, 255);
-    --ion-color-warning-shade: #e0b500;
-    --ion-color-warning-tint: #ffd31a;
-
-    --ion-color-danger: #f04141;
-    --ion-color-danger-rgb: rgb(245, 61, 61);
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: rgb(255, 255, 255);
-    --ion-color-danger-shade: #d33939;
-    --ion-color-danger-tint: #f25454;
-
-    --ion-color-dark: #222428;
-    --ion-color-dark-rgb: rgb(34, 36, 40);
-    --ion-color-dark-contrast: #ffffff;
-    --ion-color-dark-contrast-rgb: rgb(255, 255, 255);
-    --ion-color-dark-shade: #1e2023;
-    --ion-color-dark-tint: #383a3e;
-
-    --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: rgb(152, 154, 162);
-    --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: rgb(0, 0, 0);
-    --ion-color-medium-shade: #86888f;
-    --ion-color-medium-tint: #a2a4ab;
-
-    --ion-color-light: #f4f5f8;
-    --ion-color-light-rgb: rgb(244, 245, 248);
-    --ion-color-light-contrast: #000000;
-    --ion-color-light-contrast-rgb: rgb(0, 0, 0);
-    --ion-color-light-shade: #d7d8da;
-    --ion-color-light-tint: #f5f6f9;
+    --ion-color-primary-contrast-rgb: rgb(255,255,255);
+    --ion-color-primary-shade: #5900cf;
+    --ion-color-primary-tint: #741aed;
+  
+    --ion-color-secondary: #e4d2fc;
+    --ion-color-secondary-rgb: 228,210,252;
+    --ion-color-secondary-contrast: #7d28ef;
+    --ion-color-secondary-contrast-rgb: 0,0,0;
+    --ion-color-secondary-shade: #c9b9de;
+    --ion-color-secondary-tint: #e7d7fc;
+  
+    
 }
 
 :root .black-theme {
@@ -154,52 +68,4 @@
     --ion-color-secondary-shade: #2a3038;
     --ion-color-secondary-tint: #454a53;
 
-    --ion-color-tertiary: #7044ff;
-    --ion-color-tertiary-rgb: rgb(112, 68, 255);
-    --ion-color-tertiary-contrast: #ffffff;
-    --ion-color-tertiary-contrast-rgb: rgb(255, 255, 255);
-    --ion-color-tertiary-shade: #633ce0;
-    --ion-color-tertiary-tint: #7e57ff;
-
-    --ion-color-success: #10dc60;
-    --ion-color-success-rgb: rgb(16, 220, 96);
-    --ion-color-success-contrast: #ffffff;
-    --ion-color-success-contrast-rgb: rgb(255, 255, 255);
-    --ion-color-success-shade: #0ec254;
-    --ion-color-success-tint: #28e070;
-
-    --ion-color-warning: #ffce00;
-    --ion-color-warning-rgb: rgb(255, 206, 0);
-    --ion-color-warning-contrast: #ffffff;
-    --ion-color-warning-contrast-rgb: rgb(255, 255, 255);
-    --ion-color-warning-shade: #e0b500;
-    --ion-color-warning-tint: #ffd31a;
-
-    --ion-color-danger: #f04141;
-    --ion-color-danger-rgb: rgb(245, 61, 61);
-    --ion-color-danger-contrast: #ffffff;
-    --ion-color-danger-contrast-rgb: rgb(255, 255, 255);
-    --ion-color-danger-shade: #d33939;
-    --ion-color-danger-tint: #f25454;
-
-    --ion-color-dark: #222428;
-    --ion-color-dark-rgb: rgb(34, 36, 40);
-    --ion-color-dark-contrast: #ffffff;
-    --ion-color-dark-contrast-rgb: rgb(255, 255, 255);
-    --ion-color-dark-shade: #1e2023;
-    --ion-color-dark-tint: #383a3e;
-
-    --ion-color-medium: #989aa2;
-    --ion-color-medium-rgb: rgb(152, 154, 162);
-    --ion-color-medium-contrast: #000000;
-    --ion-color-medium-contrast-rgb: rgb(0, 0, 0);
-    --ion-color-medium-shade: #86888f;
-    --ion-color-medium-tint: #a2a4ab;
-
-    --ion-color-light: #f4f5f8;
-    --ion-color-light-rgb: rgb(244, 245, 248);
-    --ion-color-light-contrast: #000000;
-    --ion-color-light-contrast-rgb: rgb(0, 0, 0);
-    --ion-color-light-shade: #d7d8da;
-    --ion-color-light-tint: #f5f6f9;
 }
