--- a/src/components/app-preview/app-preview.scss
+++ b/src/components/app-preview/app-preview.scss
@@ -1,14 +1,5 @@
 app-preview{
-    datascreen-canvas{
-        --box-shadow:  var(--ion-background-shade, #1c1c1c)  0 0 30px 0;
-       --background: var(--datascreen-canvas-bg, #282830);
-        display: block;
-        width: 100%;
-        height: 100%;
-        transform-origin: 0 0;
-        transition: .2s all ease-in-out;
-    }
-    datascreen-canvas .drag_container {
+    .drag_container {
         position: absolute;
         transform-origin: 0 0;
         transition: .2s all ease-in-out;
