--- a/src/components/app-home/app-home.scss
+++ b/src/components/app-home/app-home.scss
@@ -4,6 +4,7 @@ app-home {
         flex-direction: row;
         height: 100%;
         background: url(../../assets/image/dian.png) repeat;
+        border-top: 3px solid var(--ion-background-shade);
     }
 
 }
