--- a/src/global/app.css
+++ b/src/global/app.css
@@ -53,3 +53,9 @@ a {
   width: 400px;
   max-width: 100%;
 }
+
+.code-view-popover .popover-content {
+  min-width: 40%;
+  width: 700px;
+  max-width: 100%;
+}
