--- a/src/components/cy-draggable/cy-draggable.css
+++ b/src/components/cy-draggable/cy-draggable.css
@@ -5,7 +5,7 @@
     --padding: 10px;
     --overflow: hidden;
     --opacity: 1;
-    --point-size: 20px;
+    --point-size: 30px;
     --border-width: calc(0.3 * --point-size);
     padding: 0 !important;
     margin: 0 !important;
@@ -34,6 +34,7 @@
 .container {
     width: 100%;
     height: 100%;
+    color: var(--color);
     overflow: var(--overflow);
     opacity: var(--opacity);
 }
@@ -71,7 +72,7 @@
 .drag_tag::before {
     content: "";
     position: absolute;
-    background: var(--border-color);
+    background: var(--color ,#ffffff);
     width: calc(0.3 * var(--point-size));
     height: calc(0.3 * var(--point-size));
     border-radius: 50%;
