--- a/src/components/datascreen-setting-panel/datascreen-setting-panel.scss
+++ b/src/components/datascreen-setting-panel/datascreen-setting-panel.scss
@@ -5,10 +5,6 @@ datascreen-setting-panel {
     transition: width .25s ease-in-out;
     font-size: calc(0.8 * var(--font-size));
 
-    ion-toolbar {
-        --min-height: 35px;
-    }
-
     ion-header {
         width: 332px;
     }
@@ -19,8 +15,8 @@ datascreen-setting-panel {
     }
 
     ion-segment {
-        background-color: var(--ion-color-secondary);
-
+        background-color: var(--ion-background-color);
+        --color: var(--ion-toolbar-color)!important;
         ion-segment-button {
             min-height: 30px;
             line-height: 35px;
@@ -30,8 +26,8 @@ datascreen-setting-panel {
         }
     }
     ion-toolbar{
-        --min-height: 50px;
-        margin-top: 2px;
+        margin: 2px 0;
+        --background: var(--ion-background-shade)
     }
     ion-content {
         width: 332px;
@@ -61,7 +57,7 @@ datascreen-setting-panel {
                     --border-radius: 0;
                 }
                 ion-input{
-                    --background:  var(--ion-color-secondary)!important;
+                    --background:  var(--ion-background-shade)!important;
                 }
             }
         }
