重构大屏管理 echart主题代➕

--- a/src/components/datascreen-edit-main/datascreen-edit-main.scss
+++ b/src/components/datascreen-edit-main/datascreen-edit-main.scss
@@ -34,8 +34,7 @@ datascreen-edit-main{
         overflow: scroll;
         contain: content;
         position: relative;
-        padding: 20px;
-        datascreen-canvas{
-        }
+        margin: 20px;
+       
     }
 }
