--- a/src/components/app-manage/app-manage.scss
+++ b/src/components/app-manage/app-manage.scss
@@ -22,12 +22,9 @@ app-manage {
     }
 
     ion-segment {
-        background: var(--ion-color-secondary);
+        background-color: var(--ion-background-color);
+        --color: var(--ion-toolbar-color)!important;
         justify-content: flex-start !important;
-
-        ion-segment-button {
-            min-height: 55px;
-        }
 
         ion-label {
             font-size: calc(1.2 * var(--font-size));
@@ -38,7 +35,7 @@ app-manage {
         display: flex;
         flex-wrap: wrap;
         align-content: flex-start; 
-        justify-content: center;
+        justify-content: flex-start;
         padding-top: 8px;
         user-select: none;
         padding-bottom: 50px;
@@ -47,9 +44,17 @@ app-manage {
         ion-card {
             margin: 16px;
             width: 380px;    
-            height: 288px;
+            height: 281px;
             --color: var(--ion-text-color);
             --background: var(--ion-background-contrast);
+
+            ion-card-content{
+                padding-inline-start: 0; 
+                padding-inline-end: 0;
+                ion-item{
+                    // --background:transparent;
+                }
+            }
             button{
                 height: 100%;
             }
