--- a/src/components/datascreen-canvas/datascreen-canvas.css
+++ b/src/components/datascreen-canvas/datascreen-canvas.css
@@ -1,14 +1,14 @@
 datascreen-canvas{
     --box-shadow:  var(--ion-background-shade, #1c1c1c)  0 0 30px 0;
-   --background: var(--datascreen-canvas-bg, #282830);
-    display: block;
-    width: 100%;
-    height: 100%;
+    --background: var(--datascreen-canvas-bg, #282830);
+    display: inline-block;
     transform-origin: 0 0;
-    transition: .2s all ease-in-out;
+    position: absolute;
 }
 datascreen-canvas .drag_container {
     position: absolute;
+    width: 100%;
+    height: 100%;
     transform-origin: 0 0;
     transition: .2s all ease-in-out;
     background-size: cover,contain;
@@ -16,3 +16,4 @@ datascreen-canvas .drag_container {
     background-repeat: no-repeat,no-repeat;
     box-shadow: rgba(0,0,0,.5) 0 0 30px 0;
 }
+
