--- a/src/global/app.css
+++ b/src/global/app.css
@@ -32,6 +32,10 @@ ion-toolbar {
   --min-height: var(--header-height);
 }
 
+ion-title{
+  text-align: center;
+}
+
 html {
   font-size: var(--font-size);
 }
