--- a/src/components/app-create/app-create.scss
+++ b/src/components/app-create/app-create.scss
@@ -1,16 +1,43 @@
 app-create {
 
-    .canvas-box{
+    .canvas-content{
         width: 100%;
         height: 100%;
-        display: flex;
-        flex-direction: column;
     }
-
     .canvas-container {
-        flex: 1;
+        height: 100%;
         display: flex;
-        margin: 20px;
+        margin: 10px 20px;
+        justify-content: center;
+        align-items: center;
+
+        .fit-box {
+            width: fit-content;
+            height: fit-content;
+            position: relative;
+            .top-oper-box {
+                position: absolute;
+                top: 0;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                z-index: 1;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                background: rgba(0,0,0,.52);
+                visibility: hidden;
+                translate: 0.2 ease;
+
+                ion-button{
+                    width: 115px;
+                    --border-radius: 0;
+                }
+            }
+        }
+        .fit-box:hover .top-oper-box {
+            visibility:visible;
+        }
     }
 
     ion-item {
