--- a/src/components/datascreen-edit-main/datascreen-edit-main.scss
+++ b/src/components/datascreen-edit-main/datascreen-edit-main.scss
@@ -29,7 +29,7 @@ datascreen-edit-main{
             height: 40px;
         }
     }
-    .datascreen-edit-container {
+    .canvas-container {
         flex: 1;
         overflow: scroll;
         contain: content;
