--- a/src/global/app.css
+++ b/src/global/app.css
@@ -40,6 +40,11 @@ html {
   font-size: var(--font-size);
 }
 
+main{
+  height: 100%;
+  width: 100%;
+}
+
 ion-range{
   --knob-background: var( --ion-text-color , #ffffff)
 }
