--- a/src/components/app-create/app-create.scss
+++ b/src/components/app-create/app-create.scss
@@ -3,11 +3,11 @@ app-create {
     .canvas-content{
         width: 100%;
         height: 100%;
+        padding: 10px 20px;
     }
     .canvas-container {
         height: 100%;
         display: flex;
-        margin: 10px 20px;
         justify-content: center;
         align-items: center;
 
