--- a/src/components/datascreen-edit-main/datascreen-edit-main.scss
+++ b/src/components/datascreen-edit-main/datascreen-edit-main.scss
@@ -3,8 +3,14 @@ datascreen-edit-main{
     display: flex;
     flex-direction: column;
     height: 100%;
-    overflow: scroll;
-    contain: content;
+    overflow: hidden;
+
+    .canvas-box{
+        flex: 1;
+        width: 100%;
+        padding: 10px 20px;
+    }
+
     .datascreen-edit-footer {
         height: 40px;
         margin-right: 0px;
@@ -28,13 +34,5 @@ datascreen-edit-main{
             padding-top: 0px;
             height: 40px;
         }
-    }
-    .canvas-container {
-        flex: 1;
-        overflow: scroll;
-        contain: content;
-        position: relative;
-        margin: 20px;
-       
     }
 }
