--- a/src/components/datascreen-edit-main/datascreen-edit-main.scss
+++ b/src/components/datascreen-edit-main/datascreen-edit-main.scss
@@ -9,6 +9,7 @@ datascreen-edit-main{
         flex: 1;
         width: 100%;
         padding: 10px 20px;
+        overflow: scroll;
     }
 
     .datascreen-edit-footer {
