--- a/src/global/theme.css
+++ b/src/global/theme.css
@@ -7,19 +7,19 @@
     --ion-background-contrast: #000000;
     --ion-background-shade: #d7d8da;
 
-    --ion-color-primary: #3880ff;
-    --ion-color-primary-rgb: 56, 128, 255;
+    --ion-color-primary: #0000FF;
+    --ion-color-primary-rgb: 0, 0, 255;
     --ion-color-primary-contrast: #ffffff;
     --ion-color-primary-contrast-rgb: 255, 255, 255;
-    --ion-color-primary-shade: #3171e0;
-    --ion-color-primary-tint: #4c8dff;
+    --ion-color-primary-shade: #0000e0;
+    --ion-color-primary-tint: #1a1aff;
 
-    --ion-color-secondary: #0000FF;
-    --ion-color-secondary-rgb: 0, 0, 255;
+    --ion-color-secondary: #3880ff;
+    --ion-color-secondary-rgb: 56, 128, 255;
     --ion-color-secondary-contrast: #ffffff;
     --ion-color-secondary-contrast-rgb: 255, 255, 255;
-    --ion-color-secondary-shade: #0000e0;
-    --ion-color-secondary-tint: #1a1aff;
+    --ion-color-secondary-shade: #3171e0;
+    --ion-color-secondary-tint: #4c8dff;
 }
 
 :root .purple {
